<resources>
    <string name="app_name">Login Register</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="background">Quantity of item</string>
    <string name="submit">Place</string>
    <string name="Create_your_own">FOUNTAIN DRINK</string>
    <string name="dish1">SWEET AND SPICY PORK RAMEN</string>
    <string name="dish2">MONGOLIAN BEEF RAMEN NOODLES</string>
    <string name="dish3">RAMEN VEGETABLE STIR FRY</string>
    <string name="dish4">CRUNCHY ASIAN RAMEN NOODLE SALAD</string>
    <string name="dish5">BUILD YOUR OWN</string>
    <string name="create">Add</string>
    <string name="quantity">Quantity</string>
    <string name="name">Enter Name</string>
    <string name="login">Login</string>
    <string name="loginpage">Go to Login</string>
    <string name="beg">1</string>
    <string name="signup">Sign Up</string>
    <string name="Username">Enter Username</string>
    <string name="update">Update Cart</string>
    <string name="Password">Enter Password</string>
    <string name="conPassword">Confirm Password</string>
    <string name="Price">Price</string>
    <string name="Item">Item</string>
    <string name="Subtotal">Subtotal</string>
    <string name="Tax">Tax</string>
    <string name="Quantity">Quantity</string>
    <string name="Total">Total</string>
    <string name="bght">YOUR ORDER HAS BEEN PLACED, IT WILL BE READY IN 30 MINUTES FOR PICKUP.</string>
    <string name="menu">Go to menu as a Guest</string>
    <string name="main">Menu</string>
    <string name="remove">Remove Items</string>
    <string name="goCart">Cart</string>
    <string name="oops">Go back</string>
    <string name="home">Home</string>
    <string name="addedCart">This item has been added to the cart</string>
    <string name="cart">Items you select will appear here</string>
    <string name="start">0</string>
    <string name="purchase">Purchase</string>
</resources>
